Fix Removing all items from a filtered list doesn't display warning

Remove the special warning label widget in the ProgressiveSearchWidget.
Widgets that are dynamically hidden and shown wreck havoc with layouts.
Instead the PrettyListView displays a label in cases it's completely
empty.

BUG: 260352
FIXED-IN: 2.8